--- a/finalProject/src/main/resources/application.properties
+++ b/finalProject/src/main/resources/application.properties
@@ -1,12 +1,16 @@
+
+server.port=8081
+
 # MySQL connection properties
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.sql.init.platform=mysql
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/pharmaceutical_source_of_drugs?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=root
+#spring.sql.init.mode=always
 
 # thymeleaf
 spring.thymeleaf.suffix=.html
