added form "choice manufacturer" added method ManufacturerServiceImpl.findAll. Return List manufacturers.

--- a/finalProject/src/main/resources/application.properties
+++ b/finalProject/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.show-sql=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/pharmaceutical_source_of_drugs?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=password
 #spring.sql.init.mode=always
 
 # thymeleaf
