--- a/finalProject/src/main/resources/application.properties
+++ b/finalProject/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 
-server.port=8081
-
+server.port=8082
 # MySQL connection properties
 spring.jpa.hibernate.ddl-auto=none
 spring.sql.init.platform=mysql
@@ -15,3 +14,11 @@ spring.datasource.password=password
 # thymeleaf
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
+
+# telegram
+telegram.bot.userName=PharmaceuticalSourceOfDrugsBot
+telegram.bot.botToken=1895334926:AAGqOrP8A0bKsCsMSX7ArWIsVjHMA5gg2Z8
+telegram.bot.webHookPath=https://d2f6bb5ae940.ngrok.io
+
+answer.menuFirst=I am a bot &#128521 and I am ready to help you. Select the search you are interested in &#128071 \n(If you need  come back. Just write: /menu)
+answer.menuSecond=Something else? &#129488
